fixed product img overflow

--- a/css/main.css
+++ b/css/main.css
@@ -803,6 +803,7 @@ aside.sidebar.dropdown-active:after {
 }
 .product__pic {
   max-width: 100%;
+  max-height: 100%;
 }
 .product__name {
   margin-top: 13px;
